# G-Scan

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  run.bat  test.bat  workspace.code-workspace
G-Scan/data/: user_settings.bak  user_settings.dir
G-Scan/src/: date.py  user.py
G-Scan/test/: gui_tests.py  test_date.py  test_user.py  tests.py
config/: BUILD.bazel  departments.json  document_types.json  user_defaults.json  user_settings.json
data/: BUILD.bazel  G-Scan.pyw  user_settings.dir  user_settings.json
lib/: pip_requirements.txt
lib/python/: pip_imports.txt
lib/python-third-party/: pip_imports.txt
resources/: BUILD.bazel
resources/images/: BUILD.bazel
resources/test/: BUILD.bazel
script/: build.bat  build.ps1  run.bat  setup.ps1  test.bat  test_all.bat  test_all_brief.bat
scripts/: build.ps1  run.ps1  setup.ps1  test.ps1
src/: _old_main_application.py  barcodes.py  configuration.py  data_structures.py  database.py  date.py  departments.py  document_tree.py  document_type.py  file_names.py  file_system.py  gui_launcher.py  images.py  job_references.py  paperwork_types.py  paperwork_writer.py  user.py
src/main/app/: BUILD.bazel  backup.py  driver.py  file_system.py  main_application.py  pdf_viewer.py
src/main/app/application/: BUILD.bazel  controller.py  interface.py
src/main/app/configuration/: BUILD.bazel  __init__.py  viewer.py
src/main/app/configurations/: BUILD.bazel  __init__.py  image_viewer.py  viewer.py
src/main/app/controllers/: BUILD.bazel  __init__.py  application.py  display.py  display_interface.py  image_viewer.py  main_menu.py  root.py  settings.py  viewer.py  window.py
src/main/app/controllers/viewer/: BUILD.bazel  __init__.py  application.py  document.py  document_tree.py  file_tree.py  page_canvas.py  page_view.py  tree.py  user_input.py  viewer.py
src/main/app/display/: BUILD.bazel  __init__.py  controller.py  interface.py
src/main/app/image_viewer/: BUILD.bazel  controller.py
src/main/app/installer/: BUILD.bazel  installer.py
src/main/app/interfaces/: BUILD.bazel  __init__.py  app_launcher.py  root.py  viewer_config.py
src/main/app/launchers/: BUILD.bazel  __main__.py  gui.py  installer.py  main_menu.py
src/main/app/main_menu/: BUILD.bazel  __init__.py  __main__.py  controller.py  interface.py
src/main/app/pdf_viewer/: BUILD.bazel  __main__.py  controller.py  pdf_viewer.py
src/main/app/root/: BUILD.bazel  controller.py  interface.py
src/main/app/root/interface/: BUILD.bazel  __init__.py  interface.py
src/main/app/settings/: BUILD.bazel  controller.py  interface.py
src/main/app/validation/: BUILD.bazel  file_naming.py
src/main/documents/: BUILD.bazel  __init__.py  document_tree.py  processing.py  rendering.py  types.py
src/main/documents/references/: BUILD.bazel  format.py
src/main/documents/rendering/: BUILD.bazel
src/main/documents/trees/: BUILD.bazel  __init__.py  document.py  document_tree.py  interfaces.py  pending.py  processed.py  root.py  tree.py
src/main/documents/types/: BUILD.bazel  document_types.py
src/main/file_system/: BUILD.bazel  __init__.py  backup.py  dialogs.py  directory_item.py  file_system.py  json.py  paths.py  runfiles.py
src/main/gui/: BUILD.bazel  __init__.py
src/main/gui/app/: BUILD.bazel  __init__.py  app.py  aspect_ratio.py
src/main/gui/dialogs/: BUILD.bazel  document_split.py
src/main/gui/fonts/: BUILD.bazel  __init__.py  fonts.py
src/main/gui/image_viewer/: BUILD.bazel  __init__.py  files.py  image.py  input.py  menu_bar.py  viewer.py
src/main/gui/image_viewer/panels/: BUILD.bazel  __init__.py  bitmap_canvas.py  document_tree.py  file_tree.py  files.py  image.py  image_panel.py  input.py  input_panel.py  navigation.py  navigation_panel.py  page_canvas.py  page_view.py
src/main/gui/image_viewer/toolbars/: BUILD.bazel  bottom_toolbar.py  file_menu.py  input.py  menu_bar.py  navigation.py  new.py  user_input.py  user_toolbar.py
src/main/gui/main_menu/: BUILD.bazel  logo.py  main_menu.py
src/main/gui/main_menu/departments/: BUILD.bazel  __init__.py  credit_control.py  departments.py  michelin_toolbar.py
src/main/gui/main_menu/panels/: BUILD.bazel  bottom_panel.py  middle_panel.py  top_panel.py
src/main/gui/main_menu/panels/subpanels/: BUILD.bazel  file_panel.py  user_settings_panel.py
src/main/gui/mainmenu/: BUILD.bazel  main_menu.py
src/main/gui/mainmenu/panels/: middle_panel.py
src/main/gui/mainmenu/panels/subpanels/: BUILD.bazel  file_panel.py
src/main/gui/menu/: BUILD.bazel  __init__.py  departments.py  initial_options.py  logo.py  main.py  main_menu.py  operations.py
src/main/gui/menu/departments/: BUILD.bazel  __init__.py  departments.py  michelin_toolbar.py  operations.py
src/main/gui/metrics/: BUILD.bazel  __init__.py  screen_size.py
src/main/gui/settings/: BUILD.bazel  __init__.py  defaults.py  directories.py  settings.py  settings_menu.py
src/main/gui/settings/panels/: BUILD.bazel  mode_options_panel.py
src/main/gui/settings_old/: BUILD.bazel  settings_menu.py
src/main/gui/settings_old/panels/: BUILD.bazel  buttons_panel.py  text_values_panel.py
src/main/gui/viewer/: BUILD.bazel
src/main/gui/viewer/document_tree/: BUILD.bazel  __init__.py  tree.py
src/main/gui/viewer/panels/: __init__.py
src/main/gui/viewer/toolbars/: file_menu.py
src/main/gui/widgets/: BUILD.bazel  buttons.py  checkboxes.py  dropdownboxes.py  fonts.py  frame.py  panel.py  radio_buttons.py  text.py  widget.py
src/main/gui/window/: BUILD.bazel  __init__.py  window.py
src/main/paperwork/: BUILD.bazel  types.py  writer.py
src/main/paperwork/documents/: BUILD.bazel  a4.py  customer_paperwork.py
src/main/paperwork/page_types/: BUILD.bazel  a4.py  customer_paperwork.py
src/main/paperwork/writer/: BUILD.bazel  customer_paperwork.py  loading_list_pod.py
src/main/pdf/: BUILD.bazel  extractor.py  page.py  pdf.py  pdf_reader.py  pdf_writer.py  reader.py  viewer.py  writer.py  writer_old.py
src/main/user/: BUILD.bazel  __init__.py  user.py
tests/: test_date.py  test_job_references.py  test_runner.py
tools/: python.ps1
(+327 files in other folders)
