load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "app",
    srcs = glob(["driver.py"]),
    data = ["//data:user_settings.dat"],
    main = "driver.py",
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/app/application",
        "//src/main/app/display",
        "//src/main/app/image_viewer",
        "//src/main/app/launchers",
        "//src/main/app/main_menu",
        "//src/main/app/settings",
    ],
)
