load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "app",
    srcs = glob(["driver.py"]),
    data = ["//data:user_settings.dat"],
    main = "driver.py",
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/app/controllers",
        "//src/main/app/launchers",
        "//src/main/app/root",
    ],
)
