load("@python_third_party//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "documents",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/documents/references",
        "//src/main/documents/rendering",
        "//src/main/documents/trees",
        "//src/main/documents/types",
    ],
)
