load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
  name = "file_system",
  srcs = glob(["*.py"]),
  deps = [
    "@rules_python//python/runfiles"
  ],
  data = [
    "//data:user_settings.dat",
    "//data:temp",
    "//resources:test",
    "//resources:images",
    "//resources:staging"
  ],
  visibility = ["//visibility:public"]
)