load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
    name = "file_system",
    srcs = glob(["*.py"]),
    data = [
        "//config",
        "//resources",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("wxpython"),
        "@rules_python//python/runfiles",
    ],
)
