load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
  name = "gui",
  srcs = glob(["*.py"]),
  deps = [
    "//src/main/gui/app",
    "//src/main/gui/main_menu",
    "//src/main/gui/settings",
    "//src/main/gui/image_viewer",
    "//src/main/gui/widgets",
    requirement("wxPython")
  ],
  visibility = ["//visibility:public"]
)