load("@rules_python//python:defs.bzl", "py_library")
load("@python_imports//:requirements.bzl", "requirement")

py_library(
  name = "paperwork",
  srcs = glob(["*.py"]),
  deps = [
    "//src/main/file_system",
    "//src/main/file_names",
    "//src/main/pdf"
  ],
  visibility = ["//visibility:public"]
)