load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
  name = "pdf",
  srcs = glob(["*.py"]),
  deps = [
    "//src/main/file_system",
    requirement("pymupdf"),
    requirement("numpy")
  ],
  visibility = ["//visibility:public"]
)