load("@python_third_party//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "controllers",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        requirement("wxPython"),
        "//src/main/app/configuration",
        "//src/main/app/interfaces",
        "//src/main/departments",
        "//src/main/documents",
        "//src/main/file_system",
        "//src/main/gui",
        "//src/main/user",
    ],
)
