load("@python_third_party//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "main_menu",
    srcs = glob(["*.py"]),
    data = [],
    main = "main_menu.py",
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/app/controllers",
        "//src/main/gui",
    ],
)
