load("@python_third_party//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "__main__",
    srcs = glob(["*.py"]),
    data = [],
    main = "__main__.py",
    visibility = ["//visibility:public"],
    deps = [
        requirement("wxPython"),
        "//src/main/app/controllers",
    ],
)
