load("@python_third_party//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "gui",
    srcs = glob(["*.py"]),
    data = [],
    main = "gui.py",
    visibility = ["//visibility:public"],
    deps = [
        requirement("wxPython"),
        "//src/main/app/root",
    ],
)

py_binary(
    name = "installer",
    srcs = glob(["*.py"]),
    data = [],
    main = "installer.py",
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/app/installer",
    ],
)
