load("@python_third_party//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "pdf_viewer",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        requirement("wxPython"),
        requirement("pymupdf"),
        "//src/main/gui/app",
        "//src/main/gui/menu",
    ],
)
