load("@python_third_party//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "root",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        requirement("wxPython"),
        "//src/main/app/display",
        "//src/main/app/image_viewer",
        "//src/main/app/main_menu",
        "//src/main/app/settings",
        "//src/main/gui",
    ],
)
