load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
  name = "image_viewer",
  srcs = glob(["*.py"]),
  deps = [
    "//src/main/gui/image_viewer/panels",
    requirement("wxPython")
  ],
  visibility = ["//visibility:public"]
)