load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
  name = "settings",
  srcs = glob(["*.py"]),
  deps = [
    "//src/main/gui/widgets",
    "//src/main/gui/settings/panels",
    requirement("wxPython")
  ],
  visibility = ["//visibility:public"]
)