load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
    name = "viewer",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        requirement("wxPython"),
        "//src/main/gui/viewer/document_tree",
        "//src/main/gui/viewer/panels",
        "//src/main/gui/viewer/toolbars",
    ],
)
