load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
  name = "writer",
  srcs = glob(["*.py"]),
  deps = [
    "//src/main/file_system",
    "//src/main/file_names",
    "//src/main/pdf",
    "//src/main/images"
  ],
  visibility = ["//visibility:public"]
)