load("@python_third_party//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "viewer",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        requirement("wxPython"),
        "//src/main/app/configuration",
        "//src/main/app/interfaces",
        "//src/main/documents",
        "//src/main/gui",
    ],
)
