load("@rules_python//python:defs.bzl", "py_library")
load("@python_imports//:requirements.bzl", "requirement")

py_library(
  name = "panels",
  srcs = glob(["*.py"]),
  deps = [
    "//src/main/gui/widgets",
    "//src/main/gui/main_menu/panels/subpanels"
  ],
  visibility = ["//visibility:public"]
)