load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
  name = "panels",
  srcs = glob(["*.py"]),
  deps = [
    "//src/main/file_system",
    "//src/main/gui/widgets",
    "//src/main/gui/main_menu/panels/subpanels"
  ],
  visibility = ["//visibility:public"]
)