load("@rules_python//python:defs.bzl", "py_library")
load("@python_third_party//:requirements.bzl", "requirement")

py_library(
  name = "subpanels",
  srcs = glob(["*.py"]),
  deps = [
    "//src/main/gui/widgets",
    "//src/main/file_system",
    "//src/main/date",
    requirement("wxPython")
  ],
  visibility = ["//visibility:public"]
)